--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -17,3 +17,4 @@ spring.rabbitmq.host=192.168.99.100
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
+feign.hystrix.enabled=true
