--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -18,3 +18,4 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 feign.hystrix.enabled=true
+logging.level.org.springframework.cloud.netflix.feign=debug
